--- a/app/src/main/res/layout-land/item_surah_page.xml
+++ b/app/src/main/res/layout-land/item_surah_page.xml
@@ -6,7 +6,7 @@
     <data>
         <variable
             name="item_surah"
-            type="com.elmaref.model.quran.page.WordItem" />
+            type="com.elmaref.data.model.quran.page.WordItem" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
