--- a/app/src/main/res/layout/item_surah_page.xml
+++ b/app/src/main/res/layout/item_surah_page.xml
@@ -20,27 +20,25 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
-            android:textStyle="bold"
             android:textColor="@color/quran_names_light_mode"
-            android:fontFamily="@font/decotype"
+            android:fontFamily="@font/regular"
             android:transitionName="surah"
             android:textSize="16sp"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            tools:text="Al-Fatihah" />
+            tools:text="الفَاتِحَة" />
 
         <TextView
             android:id="@+id/juzNumber"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
-            android:fontFamily="@font/decotype"
+            android:fontFamily="@font/regular"
             android:textColor="@color/quran_names_light_mode"
             android:textSize="16sp"
-            android:textStyle="bold"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            tools:text="Juz 1" />
+            tools:text="اَلْجُزْءَ اَلْأَوَّلِ" />
         <LinearLayout
             android:id="@+id/container"
             android:layout_width="match_parent"
@@ -67,7 +65,7 @@
             android:textDirection="ltr"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toBottomOf="@id/container"
-            tools:text="25" />
+            tools:text="٢٧" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
