now use the repository pattern in almost all code in my app

--- a/app/src/main/res/layout/item_surah_page.xml
+++ b/app/src/main/res/layout/item_surah_page.xml
@@ -6,7 +6,8 @@
     <data>
         <variable
             name="item_surah"
-            type="com.elmaref.data.model.quran.page.WordItem" />
+            type="com.elmaref.data.model.quran.page.WordItem"
+            />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
