--- a/app/src/main/res/layout/fragment_quran.xml
+++ b/app/src/main/res/layout/fragment_quran.xml
@@ -81,7 +81,7 @@
                             </LinearLayout>
 
                             <TextView
-                                android:id="@+id/searchQuran"
+                                android:id="@+id/quranTitle"
                                 android:layout_width="match_parent"
                                 android:layout_height="match_parent"
                                 android:layout_gravity="end|bottom"
