--- a/app/src/main/res/layout/item_surah_name.xml
+++ b/app/src/main/res/layout/item_surah_name.xml
@@ -10,6 +10,7 @@
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/item_soraName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="1dp"
