alhamdulillah, after a lot of fatigue, i am finishing from 1) click ayah 2) play audio with service but still, i develop it 3) after click of Allah everything is finished except the last read

--- a/app/src/main/res/drawable-night-hdpi/radial.xml
+++ b/app/src/main/res/drawable-night-hdpi/radial.xml
@@ -14,8 +14,8 @@
           android:centerX="579"
           android:centerY="277.44"
           android:type="radial">
-        <item android:offset="0" android:color="#2C2C2C"/>
-        <item android:offset="1" android:color="#2C2C2C"/>
+        <item android:offset="0" android:color="#003737"/>
+        <item android:offset="1" android:color="#003737"/>
       </gradient>
     </aapt:attr>
   </path>
