--- a/app/src/main/res/layout/activity_share_ayah.xml
+++ b/app/src/main/res/layout/activity_share_ayah.xml
@@ -41,32 +41,24 @@
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:alpha="0.2"
-                            android:src="@drawable/ic_subtract_3" />
+                            android:src="@drawable/ic_subtract_3"
+                            />
 
                         <LinearLayout
                             android:id="@+id/logo"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginTop="24dp"
                             android:gravity="center_vertical"
                             android:orientation="horizontal"
-                            app:layout_constraintLeft_toLeftOf="parent"
+                            android:layout_marginTop="10dp"
                             android:padding="10dp"
+                            app:layout_constraintLeft_toLeftOf="parent"
                             app:layout_constraintRight_toRightOf="parent"
                             app:layout_constraintTop_toTopOf="parent">
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_marginStart="2dp"
-                                android:text="اَلْمَعَارِفُ"
-                                android:textColor="@color/white"
-                                android:textSize="16sp" />
-
                             <ImageView
-                                android:layout_width="24dp"
-                                android:layout_height="24dp"
+                                android:layout_width="39dp"
+                                android:layout_height="39dp"
                                 android:elevation="55dp"
-                                android:padding="2dp"
                                 android:src="@drawable/icon_application"
                                 app:tint="@color/white"
                                 />
@@ -125,7 +117,7 @@
 
                         <ImageView
                             android:id="@+id/play"
-                            android:layout_width="100dp"
+                            android:layout_width="wrap_content"
                             android:layout_height="30dp"
                             android:layout_marginBottom="16dp"
                             android:src="@drawable/get_it_googleplay"
