--- a/app/src/main/res/layout/quran_menu_tfser.xml
+++ b/app/src/main/res/layout/quran_menu_tfser.xml
@@ -132,12 +132,13 @@
 
                 <TextView
                     android:id="@+id/textTranslation"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="start"
                     android:fontFamily="@font/regular"
+
                     android:layout_marginTop="10dp"
-                    android:text="يخبر تعالى عن عظمته وجلاله وسعة سلطانه، أن جميع ما في السماوات والأرض من الحيوانات الناطقة والصامتة وغيرها، [والجوامد] تسبح بحمد ربها، وتنزهه عما لا يليق بجلاله، وأنها قانتة لربها، منقادة لعزته، قد ظهرت فيها آثار حكمته، ولهذا قال: وَهُوَ الْعَزِيزُ الْحَكِيمُ فهذا فيه بيان عموم افتقار المخلوقات العلوية والسفلية لربها، في جميع أحوالها، وعموم عزته وقهره للأشياء كلها، وعموم حكمته في خلقه وأمره."
+                    android:text="، وأنها قانتة لربها، منقادة لعزته، قد ظهرت  الْعَزِيزُ ، وعموم عزته ."
                     android:textColor="@color/lightItemColor" />
             </LinearLayout>
 
