Hey there! I am thrilled to announce that I have finalized my top pick for the Screen UI and Logic. It's been an exciting journey and I cannot wait to share my choice with you!

--- a/app/src/main/res/layout/activity_saved_ayah_quran.xml
+++ b/app/src/main/res/layout/activity_saved_ayah_quran.xml
@@ -37,7 +37,9 @@
             app:layout_constraintTop_toBottomOf="@id/appBarLayout"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             android:orientation="vertical"
-            tools:listitem="@layout/item_saved_ayah_quarn" />
+            tools:listitem="@layout/item_saved_ayah_quarn"
+            app:layout_constraintBottom_toBottomOf="parent"
+            />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
