--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -4,5 +4,9 @@
     <color name="bismillah">#FF01579B</color>
     <color name="background_item">#000000</color>
     <color name="lightItemColor">#ffff</color>
+    <color name="colorPrimary">#2A6363</color>
+    <color name="colorAccent">#003737</color>
+    <color name="colorPrimaryDark">#003939</color>
+    <color name="textSecondary">@color/neutral_800</color>
 
 </resources>
