--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <color name="colorPrimary">#003737</color>
+    <color name="colorPrimaryLight">#2A6363</color>
+    <color name="colorAccent">#003737</color>
+    <color name="colorPrimaryAlpha10">#1A003737</color>
+    <color name="colorPrimaryAlpha20">#33003737</color>
+    <color name="colorPrimaryDark">#002727</color>
+    <color name="textSecondary">@color/neutral_800</color>
+
     <color name="green_200">#3A4F49</color>
     <color name="green_500">#243B35</color>
     <color name="green_700">#1D2F2A</color>
