--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -40,4 +40,5 @@
 
     <color name="background_item">#fff</color>
     <color name="lightItemColor">#000000</color>
+    <color name="read">#FF0000</color>
 </resources>
