--- a/app/src/main/res/layout/activity_container.xml
+++ b/app/src/main/res/layout/activity_container.xml
@@ -32,7 +32,7 @@
             android:id="@+id/bottom_nav_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/green_500"
+            android:background="#003737"
             app:menu="@menu/bottom_menu"
             app:itemIconTint="@color/bottom_color"
             app:itemTextColor="@color/bottom_color"
