--- a/app/src/main/res/layout/item_home_praytime.xml
+++ b/app/src/main/res/layout/item_home_praytime.xml
@@ -4,7 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
-
+        <variable
+            name="prayBinding"
+            type="com.elmaref.data.model.salat.SalatTime" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -32,6 +34,7 @@
                 android:background="@drawable/circle"
                 android:backgroundTint="@color/color_primary_a20"
                 android:padding="8dp"
+                app:setImageResource="@{prayBinding.prayIcon}"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
@@ -42,6 +45,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
+                android:text="@{prayBinding.prayTimeName}"
                 android:layout_marginEnd="24dp"
                 android:fontFamily="@font/bold"
                 android:textColor="@color/lightItemColor"
@@ -73,6 +77,7 @@
                 android:fontFamily="@font/bold"
                 android:textColor="@color/lightItemColor"
                 android:textSize="20sp"
+                android:text="@{prayBinding.prayTime}"
                 android:layout_marginStart="10dp"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
